<resources>
    <string name="app_name">Price<br/>Comparator</string>

    <!-- Product item layout -->
    <string name="description_button_options">Options button</string>
    <string name="product_weight">Per %d g:</string>
    <string name="product_price">%d tg</string>
    <string name="protein_quantity">%.1f g</string>
    <string name="weight_label_100g">Per 100 g:</string>
    <string name="label_protein_price_per_gram">Protein price/g:</string>
    <string name="protein_price_per_gram">%.2f tg</string>

    <!-- Add product fragment -->
    <string name="label_add_product">Add Product</string>
    <string name="label_edit_product">Edit Product</string>
    <string name="hint_product_name">Name</string>
    <string name="label_weight">Weight (g):</string>
    <string name="hint_weight_200">200</string>
    <string name="label_price">Price:</string>
    <string name="hint_price_500">500</string>
    <string name="label_protein_quantity">Proteins per 100g (g):</string>
    <string name="description_button_add_product">Add product button</string>
    <string name="label_food_group">Food group:</string>
    <string name="description_button_save_product">Save product button</string>
    <string name="zero" translatable="false">0</string>
    <string name="zero_decimal" translatable="false">0.0</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_delete">Delete</string>
    <string name="hint_product_weight">Weight (g)</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_protein_quantity">Protein (g)</string>
    <string name="name_input_layout_error">Name cannot be empty</string>
    <string name="weight_input_layout_error">Weight must be at least 10 g</string>
    <string name="price_input_layout_error">Price must be at least 10 tg</string>

    <!-- Options menu -->
    <string name="menu_action_sort_by">Sort by</string>
    <string name="menu_action_sort_by_default">Default</string>
    <string name="menu_action_sort_by_protein_price">Protein price</string>
    <string name="menu_action_sort_by_protein_quantity">Protein quantity</string>
    <string name="menu_action_sort_by_price">Product price</string>
    <string name="menu_action_add_random_products">Add random products</string>
    <string name="menu_action_filter_by">Filter by</string>
    <string name="menu_action_filter_by_food_group">Food groups</string>
    <string name="menu_action_filter_by_protein">Only with protein</string>
    <string name="dialog_filter_by_food_group">Filter by food groups:</string>

    <!-- Action mode -->
    <string name="action_mode_delete">Delete</string>
    <string name="action_mode_select_all">Select all</string>
    <string name="action_mode_title">%d</string>
    <string name="question_delete_selected_products">Delete selected products?</string>
    <string name="question_delete_product">Delete %s?</string>
    <string name="answer_ok">OK</string>
    <string name="answer_cancel">Cancel</string>
    <string name="answer_apply">Apply</string>

    <!-- Food groups -->
    <string name="food_group_undefined">Undefined</string>
    <string name="food_group_animal_products">Animal products</string>
    <string name="food_group_dairy">Dairy</string>
    <string name="food_group_flavor_products">Flavor products</string>
    <string name="food_group_fruit_and_vegetables">Fruit and vegetables</string>
    <string name="food_group_grain_products">Grain products</string>

    <!-- This string array is needed for the Spinner's adapter -->
    <string-array name="food_groups">
        <item>@string/food_group_undefined</item>
        <item>@string/food_group_animal_products</item>
        <item>@string/food_group_dairy</item>
        <item>@string/food_group_flavor_products</item>
        <item>@string/food_group_fruit_and_vegetables</item>
        <item>@string/food_group_grain_products</item>
    </string-array>
</resources>
