<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_add_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddProductFragment">

    <!-- Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_name"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInputEditText"
            android:inputType="text"
            android:textSize="@dimen/text_size_add_product"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Weight -->
    <TextView
        android:id="@+id/label_weight"
        style="@style/AddProductFragment.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
        tools:text="@string/label_weight" />
    <EditText
        android:id="@+id/weight"
        style="@style/AddProductFragment.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:inputType="number"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout" />

    <!-- Price -->
    <TextView
        android:id="@+id/label_price"
        style="@style/AddProductFragment.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_weight"
        tools:text="@string/label_price" />
    <EditText
        android:id="@+id/price"
        style="@style/AddProductFragment.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:inputType="number"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_weight" />

    <!-- Protein quantity -->
    <TextView
        android:id="@+id/label_protein_quantity"
        style="@style/AddProductFragment.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_protein_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_price"
        tools:text="@string/label_protein_quantity" />
    <EditText
        android:id="@+id/protein_quantity"
        style="@style/AddProductFragment.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:inputType="number"
        android:maxLength="2"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_price" />

    <!-- Food group -->
    <TextView
        android:id="@+id/label_food_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_food_group"
        android:textSize="@dimen/text_size_add_product"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="4dp"
        android:paddingTop="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_protein_quantity"
        tools:text="@string/label_food_group" />

    <Spinner
        android:id="@+id/food_group_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/protein_quantity" />

    <!-- Save product fab -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/ic_done"
        android:contentDescription="@string/description_button_save_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
