<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Product 1"
        />

    <ImageView
        android:id="@+id/button_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_button_options"
        android:src="@drawable/ic_options"
        app:tint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/weight"
        style="@style/ItemLayout.Small.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        tools:text="200 g"
        />

    <TextView
        android:id="@+id/price"
        style="@style/ItemLayout.Small.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/product_price"
        app:layout_constraintStart_toEndOf="@id/weight"
        app:layout_constraintTop_toBottomOf="@id/name"
        tools:text="550 tg"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
